@@ -69,9 +69,17 @@ Wunused-labels
 F95
 Warn when a label is unused
 
-d8
-F95 RejectNegative
-Set the default real and integer kinds to double precision
+fdefault-double-8
+F95
+Set the default double precision kind to an 8 byte wide type
+
+fdefault-integer-8
+F95
+Set the default integer kind to an 8 byte wide type
+
+fdefault-real-8
+F95
+Set the default real kind to an 8 byte wide type
 
 fdollar-ok
 F95
@@ -133,17 +141,9 @@ frepack-arrays
 F95
 Copy array sections into a contiguous block on procedure entry
 
-i8
-F95
-Set the default integer kind to double precision
-
 qkind=
 F95 RejectNegative Joined UInteger
 -qkind=<n>	Set the kind for a real with the 'q' exponent to 'n'
-
-r8
-F95
-Set the default real kind to double precision
 
 std=f95
 F95
